# vendor_kosp

./: .gitignore  LICENSE  README.md  envsetup.sh
config/: BoardConfigKernel.mk  BoardConfigKosp.mk  BoardConfigKrypton.mk  BoardConfigQcom.mk  BoardConfigSoong.mk  bootanimation.mk  common.mk  common_full_phone.mk  packages.mk  version.mk
configs/: KernelConfig.mk  KryptonCommon.mk  KryptonConfig.mk  KryptonKernel.mk  KryptonProps.mk  KryptonQcom.mk  KryptonSoong.mk  KryptonUtils.mk
configs/permissions/: vendor.krypton.biometrics.fingerprint.inscreen.xml
magisk/: Android.mk
overlays/fod/: Android.bp  AndroidManifest.xml
overlays/fod-anims/: Android.bp  AndroidManifest.xml
prebuilt/common/: Android.mk
prebuilt/common/apps/: Android.bp
prebuilt/common/etc/: apns-conf.xml
prebuilt/common/tools/: custom_apns.py
prebuilts/apps/: Android.bp
prebuilts/etc/: apns-conf.xml
products/: ginkgo.deps  guacamole.deps  guacamoleb.deps  hotdog.deps  hotdogb.deps  products.list  whyred.deps
qcom/fwk-detect/: Android.bp  vndfwk-detect.c  vndfwk-detect.h  vndfwk-test.c
scripts/: aosp_merge_exclude.txt  apn-format.xslt  extract-main.sh  findmissing.sh  merge_aosp.main.kts  sync_apns.main.kts
scripts/firmware_extractor/: .gitignore  configure.sh  dump.sh  payload_dumper.py
scripts/payload/: .gitignore  configure.sh  dump.sh  payload_dumper.py
scripts/repo_push/: .gitignore  Cargo.toml
scripts/repo_push/src/: args.rs  config.rs  main.rs  worktree_guard.rs
sepolicy/: KryptonSepolicy.mk
sepolicy/common/: attributes  hal_krypton_fod.te  platform_app.te
(+32 files in other folders)
